# aletheia-phenom

crates/app_frontend/: Cargo.toml  index.html
crates/app_frontend/src/: lib.rs  main.rs  session.rs
crates/app_frontend/src/components/: control_bar.rs  discovery_feed.rs  mod.rs  simulation_viewport.rs
crates/inference_engine/: Cargo.toml
crates/inference_engine/src/: lib.rs
crates/sim_engine/: Cargo.toml
crates/sim_engine/src/: gol.rs  gray_scott.rs  lib.rs  ode.rs
