[package]
name = "app_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"

# --- Our Workspace Crates ---
sim_engine = { path = "../sim_engine" }
# inference_engine = { path = "../inference_engine" } # We'll add this later
